--- a/Notebooks/NorthLightAI_Chatbot.ipynb
+++ b/Notebooks/NorthLightAI_Chatbot.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "152d9596",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "994cd3cf",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "3a0ee5bc",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping & indexing (Northlight AI): 100%|██████████| 34/34 [00:27<00:00,  1.24link/s]\n"
+      "Scraping & indexing (Northlight AI): 100%|██████████| 34/34 [00:35<00:00,  1.04s/link]\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "e1ba7c84",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "4f16002e",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "376f63cf",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thanks for asking a question about North Light AI! Andrew Mitchell is the Co-Founder and President of North Light AI, where he is focused on building a collaborative Innovation Lab for practical AI adoption in industry and academia. He has held leadership roles, including Associate Director at the University of New Hampshire's Center for Business Analytics. His expertise lies in leveraging AI tools to address real-world challenges and enhance business growth, especially for small to medium-sized organizations. Andrew's strategic vision is aimed at creating tangible impacts in today's digital landscape.\n"
+      "Thanks for asking a question about North Light AI! Andrew Mitchell is the Founder and President of North Light AI, where he aims to build a collaborative Innovation Lab for practical AI adoption in industry and academia. He has a strong background as a strategic leader, notably serving as the Associate Director at UNH's Center for Business Analytics. Andrew is passionate about leveraging AI tools to drive innovation and efficiency, particularly for small to medium-sized organizations. His vision emphasizes creating tangible impacts in today's digital landscape.\n"
      ]
     }
    ],
